Fix color adjustment logic into the dynamic armor sprite sheet generation